<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_title_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#33b5e5" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:drawableLeft="@drawable/selector_nav_back_detail"
            android:onClick="back"
            android:paddingLeft="10dp"
            android:text="@string/back"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/addcustomcategory"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:onClick="editAction"
            android:padding="10dp"
            android:text="@string/edit"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>
    
    
    <LinearLayout 
        android:id="@+id/ll_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/rl_title_layout" 
        android:gravity="center"
        android:padding="20dp">
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_custom_category"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/emptycategory"
            android:textSize="15sp"
            android:textColor="@android:color/darker_gray"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_title_layout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/rl_finance_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </RelativeLayout>

            <View
                android:id="@+id/view_divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider" />

            <Button
                android:id="@+id/btn_add_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_add_button"
                android:onClick="addCategoryAction"
                android:text="@string/addcategory"
                android:textColor="@color/color_add_button_text" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>